--- a/src/app/CALCULADORA/body/body.component.html
+++ b/src/app/CALCULADORA/body/body.component.html
@@ -7,12 +7,10 @@
                     </div>                   
             </div>
             <div class="bg-info  border-start border-3 border-primary col-6 ">
-                <div class="text-center">
-                    <p class="text-dark fs-5 mt-5">Number1: 10 Number2: 20 </p>
-                </div>                
-                                  
-            </div>
-              
+                <div [ngStyle] = "{'font-size': '24px', 'color': 'white','text-align':'center','margin-top':'2em'}">
+                    <p>Number1: 10 Number2: 20 </p>
+                </div>                                   
+            </div>       
         </div>
 </div>
    
