--- a/src/app/CALCULADORA/button/button.component.html
+++ b/src/app/CALCULADORA/button/button.component.html
@@ -1,10 +1,4 @@
 <div class="gap-2 col-6 mx-auto">
-    <button class="btn btn-succes" type="button">
+    <button class="btn btn-success" type="button">
    CALCULAR </button>
-   <ng-template #calculadora>
-    <h1 class="text-center">CALCULADORA</h1>
-    </ng-template>
-    
-    <ng-container *ngTemplateOutlet="calculadora"></ng-container>
-    
 </div>
